//  Copyright (c) 2022, WSO2 LLC. (http://www.wso2.org) All Rights Reserved.
//
//  WSO2 LLC. licenses this file to you under the Apache License,
//  Version 2.0 (the "License"); you may not use this file except
//  in compliance with the License.
//  You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing,
//  software distributed under the License is distributed on an
//  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
//  KIND, either express or implied.  See the License for the
//  specific language governing permissions and limitations
//  under the License.

syntax = "proto3";

package wso2.discovery.api;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/api;api";
option java_package = "org.wso2.apk.enforcer.discovery.api";
option java_outer_classname = "MockedApiConfigProto";
option java_multiple_files = true;

// [#protodoc-title: MockedApiConfig]

// MockedApiConfig holds configurations defined for a mocked API operation result
message MockedApiConfig {
	repeated MockedResponseConfig responses = 3;
}

// MockedResponseConfig hold response configurations for the mocked API implementations
message MockedResponseConfig {
	string code = 1;
	repeated MockedHeaderConfig headers = 2;
	repeated MockedContentConfig content = 3;
}

// MockedHeaderConfig holds header configs in mocked API implementations
message MockedHeaderConfig {
	string name = 1;
	string value = 2;
}

// MockedContentConfig holds content configs in mocked API implementations
message MockedContentConfig {
	string contentType = 1;
	repeated MockedContentExample examples = 2;
}

// MockedContentConfig holds content configs in mocked API implementations
message MockedContentExample {
	string Ref = 1;
	string body = 2;
}
