syntax = "proto3";

package wso2.discovery.subscription;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/subscription;subscription";
option java_package = "org.wso2.apk.enforcer.discovery.subscription";
option java_outer_classname = "URLMappingProto";
option java_multiple_files = true;

// [#protodoc-title: URLMapping]

// URLMapping data model
message URLMapping {
	string authScheme = 1;
	string httpMethod = 2;
	string urlPattern = 3;
	repeated string scopes = 4;
}
